deploy_old_argocd/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: group-10
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
