deploy_old_argocd/frontend/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: group-10
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /group-10
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: frontend
          port: 80
